<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.albarillo.Confirmation"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/Black"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="89dp"
        android:layout_height="0dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="46dp"
        android:backgroundTint="@color/DarkOrange"
        android:text="@string/total"
        android:textAlignment="center"
        android:textColor="@color/DarkOrange"
        app:layout_constraintBottom_toBottomOf="@+id/total1"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/total1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:fontFamily="cursive"
        android:text="@string/con_name"
        android:textAlignment="center"
        android:textColor="@color/DarkOrange"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_name"
        android:backgroundTint="@color/DarkOrange"
        android:background="@drawable/roundbutton"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/total1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="64dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.105" />

    <TextView
        android:id="@+id/confirmationText"
        android:layout_width="113dp"
        android:layout_height="131dp"
        android:layout_marginStart="68dp"
        android:text="@string/confirm_name"
        android:textAlignment="center"
        android:textColor="@color/DarkOrange"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalText"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:text="@string/confirm_name"
        android:textAlignment="center"
        android:textColor="@color/DarkOrange"
        app:layout_constraintBottom_toTopOf="@+id/totalText2"
        app:layout_constraintLeft_toLeftOf="@+id/totalText2"
        app:layout_constraintRight_toRightOf="@+id/totalText2"
        app:layout_constraintTop_toTopOf="@+id/totalText2"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/order1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_name"
        android:backgroundTint="@color/DarkOrange"
        android:background="@drawable/roundbutton"
        android:layout_marginEnd="9dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="9dp"
        app:layout_constraintRight_toRightOf="@+id/TitleText"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editText2" />

    <TextView
        android:id="@+id/totalText2"
        android:layout_width="122dp"
        android:layout_height="117dp"
        android:layout_marginBottom="127dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="128dp"
        android:text="@string/confirm_name"
        android:textAlignment="center"
        android:textColor="@color/DarkOrange"
        app:layout_constraintBottom_toTopOf="@+id/total1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/total1"
        android:layout_width="81dp"
        android:layout_height="27dp"
        android:layout_marginBottom="63dp"
        android:layout_marginEnd="41dp"
        android:layout_marginStart="42dp"
        android:text="@string/confirm_name"
        android:textAlignment="center"
        android:textColor="@color/DarkOrange"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        app:layout_constraintRight_toRightOf="@+id/totalText2"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="136dp"
        android:layout_height="46dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_first"
        android:textColorHint="@color/DarkOrange"
        android:backgroundTint="@color/DarkOrange"
        android:textColor="@color/DarkOrange"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="@+id/total1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="136dp"
        android:layout_height="46dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastName_name"
        android:textColorHint="@color/DarkOrange"
        android:textColor="@color/DarkOrange"
        android:backgroundTint="@color/DarkOrange"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintLeft_toRightOf="@+id/confirmationText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:layout_constraintVertical_bias="0.25"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_address"
        android:textColorHint="@color/DarkOrange"
        android:textColor="@color/DarkOrange"
        android:backgroundTint="@color/DarkOrange"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint_credit"
        android:textColorHint="@color/DarkOrange"
        android:textColor="@color/DarkOrange"
        android:backgroundTint="@color/DarkOrange"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintLeft_toLeftOf="@+id/editText3"
        app:layout_constraintRight_toRightOf="@+id/editText3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
