<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.albarillo.Order"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/Black"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/order_name"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="40sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="33dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.496" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="97dp"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="98dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/title_name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/TitleText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/DarkOrange"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/back_name"
        android:textSize="18sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/DarkOrange"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/next_name"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/clear1"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/backButton" />

    <Button
        android:id="@+id/confirm1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/DarkOrange"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/confirm_name"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/backButton"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/clear1"
        tools:layout_constraintBaseline_creator="1" />

    <Button
        android:id="@+id/clear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/DarkOrange"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/reset_name"
        android:textSize="18sp"
        android:layout_marginStart="31dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="23dp"
        app:layout_constraintLeft_toLeftOf="@+id/backButton" />

    <EditText
        android:id="@+id/inputText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:backgroundTint="@color/DarkOrange"
        android:ems="10"
        android:foregroundTint="@color/DarkOrange"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:gravity="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/inputText2"
        app:layout_constraintRight_toRightOf="@+id/inputText2"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/inputText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/DarkOrange"
        android:ems="10"
        android:gravity="center"
        android:foregroundTint="@color/DarkOrange"
        android:inputType="number"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/inputText3"
        app:layout_constraintRight_toRightOf="@+id/inputText3"
        app:layout_constraintTop_toBottomOf="@+id/inputText1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/inputText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/DarkOrange"
        android:ems="10"
        android:foregroundTint="@color/DarkOrange"
        android:inputType="number"
        android:gravity="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/inputText4"
        app:layout_constraintRight_toRightOf="@+id/inputText4"
        app:layout_constraintTop_toBottomOf="@+id/inputText2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/inputText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/DarkOrange"
        android:ems="10"
        android:gravity="center"
        android:foregroundTint="@color/DarkOrange"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/TitleText"
        app:layout_constraintRight_toRightOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/inputText3"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/price1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text=""
        android:textColor="@android:color/holo_orange_dark"
        android:layout_marginStart="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/textView1"
        android:layout_marginLeft="12dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/chicken_name"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorLink="@color/Black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/inputText2"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="55dp"
        app:layout_constraintLeft_toLeftOf="@+id/price1"
        android:layout_marginLeft="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bacon_name"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="34dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/pepper_name"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintLeft_toRightOf="@+id/inputText4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/onion_name"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/totalView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/total_name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/clear1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.498" />

</android.support.constraint.ConstraintLayout>
