<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.albarillo.Detail"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/Black"
    tools:layout_editor_absoluteX="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/detail_name"
        android:textAllCaps="false"
        android:textColor="@color/DarkOrange"
        android:textSize="40sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="77dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/DarkOrange"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/back_name"
        android:textSize="18sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="65dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/regularImage"
        android:layout_width="150dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/regularpizza"
        app:layout_constraintRight_toLeftOf="@+id/regularText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/largeImage"
        android:layout_marginBottom="42dp" />

    <ImageView
        android:id="@+id/largeImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="13dp"
        app:srcCompat="@drawable/largepizza"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/largeText"
        android:layout_marginLeft="13dp" />

    <TextView
        android:id="@+id/largeText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/largepizza"
        android:textAlignment="center"
        android:textColor="@color/DarkOrange"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/regularImage"
        android:layout_marginTop="19dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/regularImage"
        app:layout_constraintTop_toTopOf="@+id/largeImage"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/regularText"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/regularpizza"
        android:textAlignment="center"
        android:textColor="@color/DarkOrange"
        android:textSize="30sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/regularImage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="44dp" />

</android.support.constraint.ConstraintLayout>
